# Scam-FraudResolutionFabric

./: .env.example  .gitignore  BehavioralPatternAgent.py  CustomerInfoAgent.py  DialogueAgent.py  FeedbackCollectorAgent.py  MerchantInfoAgent.py  PolicyDecisionAgent.py  README.md  RiskAssessorAgent.py  RiskSynthesizerAgent.py  SupervisorAgent.py  TransactionContextAgent.py  TriageAgent.py  agent_base.py  agent_core_memory_integration.py  agentcore_setup.py  agents.py  agents_multi.py  api_server.py  aws_bedrock.py  aws_bedrock_docs.py  config.py  context_store.py  demo_memory_integration.py  enhanced_langgraph_with_memory.py  enhanced_strands_with_memory.py  fraud_detection_agent.py  fraud_patterns.yaml  hybrid_deployment_option.py  intel_agent.py  intelligent_dialogue.py  langgraph_multi_agent.py  main_multi_agent.py  mcp_store.py  mem0_config.py  mem0_integration.py  performance_monitor.py  prompt.txt  pyproject.toml  (+12 more)
config/: customer_protection.yaml  fraud_patterns.yaml  questions.yaml  regulatory.yaml  sops.yaml
context_store/: AnomalyContext_ALRT-AU-CUST1053-1.json  AnomalyContext_ALRT-AU-CUST2245-1.json  AnomalyContext_ALRT-AU-CUST7712-1.json  DecisionContext_ALRT-AU-CUST1053-1.json  DecisionContext_ALRT-AU-CUST2245-1.json  DecisionContext_ALRT-AU-CUST7712-1.json  MerchantContext_m123.json  RiskSummaryContext_.json  RiskSummaryContext_ALRT-AU-CUST1053-1.json  RiskSummaryContext_ALRT-AU-CUST2245-1.json  RiskSummaryContext_ALRT-AU-CUST7712-1.json  TransactionContext_ALRT-AU-CUST1053-1.json  TransactionContext_ALRT-AU-CUST2245-1.json  UserContext_AU-CUST1053.json  (+3 more)
(+34 files in other folders)
