[project]
name = "genai-for-payments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "boto3>=1.39.3",
    "langgraph>=0.5.1",
    "plotly>=6.2.0",
    "qdrant-client>=1.14.3",
    "streamlit>=1.46.1",
    "streamlit-aggrid>=1.1.6",
    "streamlit-chat>=0.1.1",
]
