[project]
name = "genai-for-payments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "altair>=5.5.0",
    "asyncio>=3.4.3",
    "boto3>=1.39.3",
    "dataclasses>=0.8",
    "fastapi>=0.116.1",
    "fastmcp>=0.1.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.28",
    "langgraph>=0.2.74",
    "mem0ai[graph]>=0.1.115",
    "neo4j>=5.28.2",
    "numpy>=1.26.4",
    "openai>=1.0.0",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "plotly>=6.2.0",
    "prometheus-client>=0.22.1",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "qdrant-client>=1.14.3",
    "streamlit>=1.46.1",
    "streamlit-aggrid>=1.1.6",
    "streamlit-chat>=0.1.1",
    "structlog>=25.4.0",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]
